# mcp-integration-example

./: .gitignore  AGENTS.md  DESIGN.md  Directories.md  README.md  TODO.md  dynamic-registration-todo.md
app_server/: .env.example  .gitignore  README.md  config.py  db.py  main.py  pyproject.toml
app_server/auth/: dummy_oauth.py  jwt.py  session.py
app_server/providers/: gemini.py  google_calendar.py
app_server/routes/: admin.py  api.py  auth.py  chat.py  dummy_oauth.py  google_login.py  oauth.py  oauth_authorize.py  oauth_metadata.py  oauth_registration.py
app_server/shared/: models.py  utils.py
app_server/static/: style.css
app_server/templates/: base.html  chat_list.html  chat_room.html  credential_detail.html  credentials.html  dummy_login.html
docs/: ARCHITECTURE.md  dynamic-registration.md
mcp_server/: README.md  auth.py  client.py  main.py  pyproject.toml  test_oauth_client.py  tools.py
